<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.david.toolkitApp.MainActivity"
    android:background="#E8E8E8">

    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/ll_firstConversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_firstConversion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="5"
                    android:hint="@string/from"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColorHint="#757575" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_firstConversion"
                    android:padding="16dp"
                    android:contentDescription="@string/primera_divisa"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_secondConversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_secondConversion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:hint="@string/to"
                    android:inputType="number"
                    android:padding="16dp"
                    android:autofillHints=""
                    android:textColor="#1B1919"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_secondConversion"
                    android:padding="16dp"
                    android:contentDescription="@string/segunda_divisa"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnConvert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/convertir" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>